Cleanup some stuff from template we don't need

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ version = 0.0.dev
 author = Christian Dersch
 author_email = christian.dersch@physik.uni-marburg.de
 description = applausequery
-long_description = 
+long_description = Query APPLAUSE TAP service
 license = BSD 3-Clause
 url = https://github.com/lupinix/applausequery
 edit_on_github = False
@@ -15,20 +15,9 @@ python_requires = ">=3.5"
 [options]
 # install_requires should be formatted as a semicolon-separated list, e.g.:
 # install_requires = astropy; scipy; matplotlib
-install_requires = astropy
+install_requires = pyvo
 zip_safe = False
 use_2to3 = False
-
-[options.entry_points]
-console_scripts =
-    
-    astropy-package-template-example = packagename.example_mod:main
-    
-
-[options.package_data]
-* = *.c
-applausequery = data/*
-applausequery.tests = coveragerc
 
 [build_sphinx]
 source-dir = docs
