--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ python_requires = ">=3.5"
 [options]
 # install_requires should be formatted as a semicolon-separated list, e.g.:
 # install_requires = astropy; scipy; matplotlib
-install_requires = pyvo
+install_requires = pyvo>=0.9.1
 zip_safe = False
 use_2to3 = False
 
